# itom

./: .clang-format  .codespell_ignore_words.txt  .gitignore  .pre-commit-config.yaml  .pylintrc  CMakeLists.txt  COPYING.txt  Find3DCONNEXION.cmake  FindFFTW.cmake  FindGLEW.cmake  FindITOM_SDK.cmake  FindLAPACKE.cmake  FindLibUSB.cmake  FindNumPy.cmake  FindOpenCV.cmake  FindQScintilla.cmake  FindVisualLeakDetector.cmake  FindWindowsSDK.cmake  FindXerces.cmake  FindXsd.cmake  ItomBuildMacros.cmake  LGPL_EXCEPTION.txt  README.md  SetupChangeLog.txt  build_designer_plugins_itom_debug_and_release_x64.bat  changes.txt  compile_debug32.bat  compile_debug32_v11.bat  compile_debug32_v12.bat  compile_debug32_v13.bat  compile_debug32_v14.bat  compile_debug32_v15.bat  compile_debug64.bat  compile_debug64_v11.bat  compile_debug64_v12.bat  compile_debug64_v13.bat  compile_debug64_v14.bat  compile_debug64_v15.bat  compile_release32.bat  compile_release32_v11.bat  (+27 more)
AddInManager/: 0.h  CMakeLists.txt  PlugInModel.cpp  addInManager.cpp  addInManager.h  addInManagerImpl.cpp  addInManagerPrivate.cpp  addInManagerPrivate.h  addInManagerVersion.h  addInMgrDefines.h  algoInterfaceValidator.cpp  algoInterfaceValidator.h  apiFunctions.cpp  apiFunctions.h  global.h  paramHelper.cpp  paramHelper.h  pluginModel.cpp  pluginModel.h  sharedPointerHelper.h  version.rc
AddInManager/translation/: addinmanager_de.ts  addinmanager_zh.ts
DataObject/: CMakeLists.txt  dataObjectFuncs.cpp  dataObjectFuncs.h  dataobj.cpp  dataobj.cpp.orig  dataobj.h  dataobjVersion.h  defines.h  readWriteLock.h  version.rc
MarkerLegend/: CMakeLists.txt  defines.h  markerLegendWidget.cpp  markerLegendWidget.h
MarkerLegend/Sources/: markerLegendWidget.cpp
PointCloud/: CMakeLists.txt  pclDefines.h  pclFunctions.cpp  pclFunctions.h  pclStructures.cpp  pclStructures.h  pclVersion.h  version.rc
PointCloud/impl/: pclFunctionsImpl.h
QPropertyEditor/: BooleanCombo.cpp  BooleanCombo.h  CMakeLists.txt  ColorCombo.cpp  ColorCombo.h  EnumProperty.cpp  EnumProperty.h  FlagsProperty.cpp  FlagsProperty.h  FontEditor.cpp  FontEditor.h  Property.cpp  Property.h  PropertyEditor.sln  QPropertyEditorWidget.cpp  QPropertyEditorWidget.h  QPropertyModel.cpp  QPropertyModel.h  QVariantDelegate.cpp  QVariantDelegate.h  StringListEditor.h  autoIntervalProperty.cpp  autoIntervalProperty.h  defines.h  itomCustomTypes.cpp  itomCustomTypes.h  propertyEditorVersion.h  qVector2DProperty.cpp  qVector2DProperty.h  qVector3DProperty.cpp  qVector3DProperty.h  qVector4DProperty.cpp  qVector4DProperty.h  stringListDialog.cpp  stringListDialog.h  stringListDialog.ui  stringListEditor.cpp  stringListEditor.h  version.rc
QPropertyEditor/doc/: GenerateDoc.bat  QPropertyEditor.dxy
QPropertyEditor/src/: src.pro
Qitom/: 0.h  AppManagement.cpp  AppManagement.h  CMakeLists.txt  COPYING.txt  Qitom.pri  Qitom.pro  aaa.h  about.html  address.html  benchmarks.h  contributors.html  global.cpp  global.h  global.h.in  iconThemeBright.qrc  iconThemeDark.qrc  itom_sdk.h  itom_sdk.h.in  main.cpp  main.h  mainApplication.cpp  mainApplication.h  pyGit2Header.py.in  pyItomFileVersion.py.in  qitom.qrc  qitom.vcxproj.user.win32  qitom.vcxproj.user.x64  version.h.in  version.rc.in  version.rctmpl  version.tmpl  version_nogit.h  version_nosvn.h  widgets.html
Qitom/api/: apiFunctions.cpp  apiFunctions.h  apiFunctionsGraph.cpp  apiFunctionsGraph.h
Qitom/codeEditor/: codeCheckerItem.cpp  codeEditor.cpp  (+20 more)
codeEditor/: CMakeLists.txt  charBasedFoldDetector.cpp  codeEditor.cpp  delayJobRunner.cpp  foldDetector.cpp  indentFoldDetector.cpp  main.cpp  mode.cpp  syntaxHighlighterBase.cpp
common/: CMakeLists.txt  abstractAddInConfigDialog.cpp  abstractAddInConfigDialog.h  abstractAddInDockWidget.cpp  abstractAddInDockWidget.h  abstractAddInGrabber.h  abstractApiWidget.h  addInGrabber.cpp  addInGrabber.h  addInInterface.cpp  addInInterface.h  addInInterfaceVersion.h  addInMultiChannelGrabber.h  apiFunctionsGraphInc.h  apiFunctionsInc.h  basicCheckerDefs.h  byteArray.h  color.h  commonGlobal.h  commonVersion.h  fileUtils.h  functionCancellationAndObserver.h  helperActuator.cpp  helperActuator.h  helperColor.h  helperCommon.cpp  helperCommon.h  helperDatetime.h  helperGrabber.cpp  helperGrabber.h  interval.h  itomLog.h  itomPlotHandle.h  numeric.h  param.h  paramMeta.h  pluginThreadCtrl.h  qtMetaTypeDeclarations.h  retVal.h  semVerVersion.h  (+14 more)
commonQt/: CMakeLists.txt  commonQtVersion.h  version.rc
iconThemes/: CMakeLists.txt
itomWidgets/: CMakeLists.txt  basePopupWidget.cpp  basePopupWidget.h  basePopupWidget_p.h  brushCreatorButton.cpp  brushCreatorButton.h  brushCreatorDialog.cpp  brushCreatorDialog.h  checkableComboBox.cpp  checkableComboBox.h  collapsibleGroupBox.cpp  collapsibleGroupBox.h  colorDialog.cpp  colorDialog.h  colorPickerButton.cpp  colorPickerButton.h  comboBox.cpp  comboBox.h  commonWidgets.h  dObMetaDataTable.cpp  dObMetaDataTable.h  dataObjectDelegate.cpp  dataObjectDelegate.h  dataObjectMetaTable.cpp  dataObjectMetaTable.h  dataObjectMetaWidget.cpp  dataObjectMetaWidget.h  dataObjectModel.cpp  dataObjectModel.h  dataObjectTable.cpp  dataObjectTable.h  dialogHeatmapConfiguration.cpp  dialogHeatmapConfiguration.h  doubleRangeSlider.cpp  doubleRangeSlider.h  doubleRangeWidget.cpp  doubleRangeWidget.h  doubleSlider.cpp  doubleSlider.h  doubleSpinBox.cpp  (+67 more)
itom_unittests/: CMakeLists.txt  DataObject_Unittest.docx  unittest_test.py
plot/: AbstractDObjFigure.cpp  AbstractDObjFigure.h  AbstractDObjPCLFigure.h  AbstractFigure.cpp  AbstractFigure.h  AbstractItomDesignerPlugin.h  AbstractNode.cpp  AbstractNode.h  CMakeLists.txt  abstractItomDesignerPlugin.h  designerPluginInterfaceVersion.h  drawItem.cpp  drawItem.h  multiPointPickerMachine.cpp  multiPointPickerMachine.h  plotCommon.h  plotVersion.h  userInteractionPlotPicker.cpp  userInteractionPlotPicker.h  version.rc
pluginTemplates/: CMakeLists.txt  algoPlugin.cpp  algoPlugin.h  cameraPlugin.cpp  cameraPlugin.h  pluginVersion.h  readme.txt  version.rc
shape/: CMakeLists.txt  shapeCommon.h  shapeVersion.h  version.rc
(+2434 files in other folders)
